update hbase-env.sh with that in hbase-2.4.4